<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".UI.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="643dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/realist"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app2:layout_constraintBottom_toTopOf="@+id/searchView"
        app2:layout_constraintTop_toTopOf="parent"
        app2:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background3"
        app2:layout_constraintTop_toBottomOf="@+id/title"
        app2:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:focusable="true"
        android:clickable="true"
        android:iconifiedByDefault="false"
        >

    </SearchView>

    <Button
        android:id="@+id/button_sort"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/background4"
        android:fontFamily="@font/gotham_book"
        android:padding="10dp"
        android:text="@string/sort_by_price"
        android:textColor="#000000"
        android:textSize="12sp"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/button_location"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_enable_location1"
        android:background="@drawable/background5"
        android:fontFamily="@font/gotham_book"
        android:text="@string/enable_location"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        app2:layout_constraintEnd_toStartOf="@id/button_sort"
        app2:layout_constraintTop_toBottomOf="@id/searchView">

    </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app2:layout_constraintTop_toBottomOf="@id/button_sort"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
       >
    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/search_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app2:layout_constraintTop_toBottomOf="@id/button_sort"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintBottom_toTopOf="@+id/bottom_nav">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/search_state_empty"
            android:contentDescription="@string/no_results"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_results"
            android:textSize="16sp"
            android:fontFamily="@font/gotham_light"
            android:gravity="center"
            ></TextView>

    </FrameLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent"
        app2:menu="@menu/bottom_navigation_menu"
        style="Widget.MaterialComponents.BottomNavigationView.Colored"
        app2:itemIconSize="25dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
